--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <title>Index</title>
 </head>
 <body>
-  Index
+  <h1>Index</h1>
+  <br>
+  <a href="/secured/user">User</a>
+  <br>
+  <a href="/secured/admin">Admin</a>
 </body>
 </html>
