Работа над фронтендом

--- a/src/main/resources/templates/views/getUserById.html
+++ b/src/main/resources/templates/views/getUserById.html
@@ -5,6 +5,7 @@
     <title th:text="${username}">User</title>
 </head>
 <body>
+<div class="row" th:insert="templates/nav::nav"></div>
     <div class="container-flow">
         <div class="row">
             <div class="col-md-6">
