--- a/src/main/resources/templates/templs/nav.html
+++ b/src/main/resources/templates/templs/nav.html
@@ -4,12 +4,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nav template</title>
 </head>
 <body>
 <nav th:fragment="nav" class="navbar navbar-dark bg-dark navbar-expand-md ">
     <div class="container">
-        <a class="navbar-brand fs-5" href="/index">
+        <a class="navbar-brand fs-5" href="/public/welcome">
             <img th:src="@{/images/logo.png}" alt="Logo" width="40"  class="d-inline-block align-text-auto">
             Rumus
         </a>
@@ -19,21 +19,21 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/orders">Музыка</a>
+                    <a class="nav-link " aria-current="page" href="/public/music">Музыка</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/orders/ordersList">Новости</a>
+                    <a class="nav-link " aria-current="page" href="/public/news">Новости</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/products">О нас</a>
+                    <a class="nav-link " aria-current="page" href="/public/about">О нас</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/orders">Вход</a>
+                    <a class="nav-link " aria-current="page" href="/login">Вход</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/orders/ordersList">Регистрация</a>
+                    <a class="nav-link " aria-current="page" href="/register">Регистрация</a>
                 </li>
 
             </ul>
