--- a/src/main/resources/templates/templs/footer.html
+++ b/src/main/resources/templates/templs/footer.html
@@ -21,9 +21,11 @@
                 </div>
                 <div class="col-lg-3 col-xs-12 links">
                     <h4 class="mt-lg-0 mt-sm-4">Ссылки</h4>
-                    <a class="link-secondary p-0" href="">Главная</a>
+                    <a class="link-secondary p-0" href="/public/welcome">Главная</a>
                     <br>
-                    <a class="link-secondary p-0" href="">О нас</a>
+                    <a class="link-secondary p-0" href="/public/news">Новости</a>
+                    <br>
+                    <a class="link-secondary p-0" href="/public/about">О нас</a>
                 </div>
                 <div class="col-lg-3 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Адрес и контакты</h4>
