--- a/src/main/resources/templates/views/userPage.html
+++ b/src/main/resources/templates/views/userPage.html
@@ -12,21 +12,21 @@
 
 <main class="container flex-fill mt-5">
 <!--    Информация о пользователе-->
-    <div class="row" th:object="${client}">
-        <h1 th:text="*{name}">Имя пользователя</h1>
+    <div class="row">
+        <h1 th:text="${client.getName()}">Имя пользователя</h1>
     </div>
 
-    <div class="row">
+    <div class="row mt-5">
 
         <div class="col-md-4">
             <h2>Треки</h2>
             <ol class="list-group list-group-flush list-group-numbered">
-                <li th:each="track : ${traks}" class="list-group-item d-flex justify-content-between align-items-start">
+                <li th:each="track : ${tracks}" class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
                         <div th:text="${track.getTitle()}" class="fw-bold">Название трека</div>
                         <span th:text="${track.getAlbum()}">Альбом</span>
                     </div>
-                    <span class="badge bg-primary rounded-pill">Длительность 1:22</span>
+                    <span th:text="${track.getLength()}" class="badge bg-primary rounded-pill">Длительность</span>
                 </li>
             </ol>
         </div>
@@ -37,9 +37,9 @@
                 <li th:each="album : ${albums}" class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
                         <div th:text="${album.getTitle()}" class="fw-bold">Название альбома (плейлиста)</div>
-                        <span th:text="${album.getType()}">Тип</span>
+                        <span th:text="${album.getPlaylistType()}">Тип</span>
                     </div>
-                    <span class="badge bg-primary rounded-pill">Размер 1</span>
+                    <span th:text="${album.getSize()}" class="badge bg-primary rounded-pill">Размер</span>
                 </li>
             </ol>
         </div>
@@ -50,9 +50,9 @@
                 <li th:each="playlist : ${playlists}" class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
                         <div th:text="${playlist.getTitle()}" class="fw-bold">Название плейлиста</div>
-                        <span th:text="${playlist.getType()}">Тип</span>
+                        <span th:text="${playlist.getPlaylistType()}">Тип</span>
                     </div>
-                    <span class="badge bg-primary rounded-pill">Размер 1</span>
+                    <span th:text="${playlist.getSize()}" class="badge bg-primary rounded-pill">Размер 1</span>
                 </li>
             </ol>
         </div>
