рефактор отображения франта для плейлистов и треков, добавление страницы добавления треков

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Upload MP3 File</h1>
-<form method="post" enctype="multipart/form-data" th:action="@{/upload}">
+<form method="post" enctype="multipart/form-data" th:action="@{/track/upload}">
     <input type="file" name="file"/>
     <input type="submit" value="Upload"/>
 </form>
