--- a/src/main/resources/templates/templs/nav.html
+++ b/src/main/resources/templates/templs/nav.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/public/music">Музыка</a>
+                    <a class="nav-link " aria-current="page" href="/track/upload">Добавить трек</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/public/news">Новости</a>
@@ -28,12 +28,21 @@
                     <a class="nav-link " aria-current="page" href="/public/about">О нас</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
+            <ul th:if="${not #authorization.expression('isAuthenticated()')}" class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/login">Вход</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/register">Регистрация</a>
+                </li>
+
+            </ul>
+            <ul th:if="${#authorization.expression('isAuthenticated()')}" class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a th:text="${#authentication.getName()}" class="nav-link " aria-current="page" href="/user">Имя пользователя</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="/logout">Выход</a>
                 </li>
 
             </ul>
