--- a/src/main/resources/templates/views/register.html
+++ b/src/main/resources/templates/views/register.html
@@ -11,7 +11,7 @@
 <div class="container-flow" th:insert="~{templs/nav::nav}"></div>
 
 <main class="container flex-fill mt-5">
-    <form class="col-md-3 mx-auto text-start" action="#" th:action="@{/register}" th:object="${client}" method="post">
+    <form class="col-md-3 mx-auto text-start mt-5" action="#" th:action="@{/register}" th:object="${client}" method="post">
         <h1>Регистрация</h1>
         <label class="form-label" for="name">Имя пользователя:</label>
         <input class="form-control" type="text" id="name" th:field="*{name}" /><br>
