--- a/src/main/resources/templates/views/userPage.html
+++ b/src/main/resources/templates/views/userPage.html
@@ -12,7 +12,7 @@
 
 <main class="container flex-fill mt-5">
 <!--    Информация о пользователе-->
-    <div class="row">
+    <div class="row mt-5">
         <h1 th:text="${client.getName()}">Имя пользователя</h1>
     </div>
 
