--- a/src/main/resources/templates/templs/nav.html
+++ b/src/main/resources/templates/templs/nav.html
@@ -22,6 +22,9 @@
                     <a class="nav-link " aria-current="page" href="/track/upload">Добавить трек</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="/playlist/add">Добавить плейлист</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/public/news">Новости</a>
                 </li>
                 <li class="nav-item">
