--- a/src/main/resources/templates/views/playlistAdd.html
+++ b/src/main/resources/templates/views/playlistAdd.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Добавить трек</title>
+    <title>Добавить плейлист</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
 
@@ -15,25 +15,24 @@
     <div th:if="${successMessage}" class="alert alert-success" role="alert" th:text="${successMessage}"></div>
     <div th:if="${errorMessage}" class="alert alert-danger" role="alert" th:text="${errorMessage}"></div>
 
-    <form th:object="${track}" method="post" enctype="multipart/form-data" th:action="@{/track/upload}" class="col-md-3 mx-auto text-start mt-5" action="#" >
-        <h1>Добавить трек</h1>
-        <label class="form-label" for="titleInput">Название трека</label>
-        <input th:field="*{title}" class="form-control" type="text" id="titleInput" required />
+    <form th:object="${playlist}" th:action="@{/playlist/add}" class="col-md-3 mx-auto text-start mt-5" action="#"  method="post" enctype="multipart/form-data">
+        <h1>Добавить плейлист</h1>
+        <label class="form-label" for="titleInput">Название</label>
+        <input th:field="*{title}" class="form-control" type="text" id="titleInput" required/>
         <br>
 
-        <label class="form-label" for="albumInput">Альбом:</label>
-        <input th:field="*{album}" class="form-control" type="text" id="albumInput"  required />
+        <label class="form-label" for="albumInput">Описание:</label>
+        <input th:field="*{description}" class="form-control" type="text" id="albumInput"/>
         <br>
 
-        <label class="form-label" for="exampleFormControlSelect1">Выберете тип трека</label>
-        <select th:field="*{trackType.id}" class="form-control" id="exampleFormControlSelect1" required>
-            <option th:each="type:${trackTypes}" th:value="${type.id}" th:text="${type.name}"></option>
+        <label class="form-label" for="exampleFormControlSelect1">Выберете тип плейлиста</label>
+        <select th:field="*{playlistType.id}" class="form-control" id="exampleFormControlSelect1" required>
+            <option th:each="type:${playlistTypes}" th:value="${type.getId()}" th:text="${type.getName()}"></option>
         </select>
         <br>
 
-        <label class="form-label" for="albumInput">Загрузите файл</label>
-        <input class="form-control" type="file" name="file" accept=".mp3" required>
         <button class="btn btn-primary mt-3" type="submit">Добавить</button>
+
     </form>
 </main>
 
