--- a/src/main/resources/templates/templs/nav.html
+++ b/src/main/resources/templates/templs/nav.html
@@ -19,6 +19,12 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="/track/search">Треки</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="/playlist/search">Плейлисты</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/track/upload">Добавить трек</a>
                 </li>
                 <li class="nav-item">
