--- a/src/main/resources/templates/views/playlistSearch.html
+++ b/src/main/resources/templates/views/playlistSearch.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-        <html xmlns:th="http://www.thymeleaf.org" lang="en">
-        <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <meta charset="UTF-8">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <title>Треки</title>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>Плейлисты</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
 
@@ -31,8 +31,8 @@
                 <li th:each="track : ${trackList}" class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto link-secondary">
                         <a class="stretched-link" href="" th:href="@{/track/{id}(id=${track.getId()})}"></a>
-                        <div th:text="${track.getTitle()} + ' – ' + ${track.getAlbum()}" class="fw-bold">Название трека – Альбом</div>
-                        <span th:text="${track.getAuthor().getName()} + ' – ' + ${track.getTrackType().getName()}" >Автор – Тип</span>
+                        <div th:text="${track.getTitle()}" class="fw-bold">Название трека</div>
+                        <span th:text="${track.getAuthor().getName()}">Исполнитель</span>
                     </div>
                     <span th:text="${track.getLength()}" class="badge bg-primary rounded-pill">Длительность</span>
                 </li>
